--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,13 @@ code {
 .app{
   width: 100vw;
   height: 100vh;
+  display: flex;
+}
+
+.card{
+  margin: auto;
+  width: 600px;
+  height: 300px;
+  background-color: #fff;
+  box-shadow: 2px 2px 8px #000;
 }
