leccion del dia jc: flex-end..no jc:end..ahora si >:)

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ code {
 }
 .quoteBox div:nth-child(3){
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .button i{
   margin: 1rem;
